Fixed vertical text alignment in modal button

--- a/_sass/components/modal.scss
+++ b/_sass/components/modal.scss
@@ -75,7 +75,7 @@
 	height: 58px;
 	border-radius: 6px;
 	background-color: $black;
-	padding: 8px 40px;
+	padding: 16px 40px;
 	a {
 		color: $white;
 		font-size: 18px;
